--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,11 @@
 <html>
-<h1>yoyoyo</h1>
+   <body>
+      
+      <form action = "https://enigmatic-tor-28854.herokuapp.com/" method = "GET">
+         First Name: <input type = "text" name = "first_name">  <br>
+         Last Name: <input type = "text" name = "last_name">
+         <input type = "submit" value = "Submit">
+      </form>
+      
+   </body>
 </html>
