--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <html>
    <body>
       
-      <form action = "https://enigmatic-tor-28854.herokuapp.com/" method = "GET">
+      <form action = "https://enigmatic-tor-28854.herokuapp.com/process_get" method = "GET">
          First Name: <input type = "text" name = "first_name">  <br>
          Last Name: <input type = "text" name = "last_name">
          <input type = "submit" value = "Submit">
