--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,8 @@
    <body>
       
       <form action = "https://enigmatic-tor-28854.herokuapp.com/process_get" method = "GET">
-         First Name: <input type = "text" name = "first_name">  <br>
-         Last Name: <input type = "text" name = "last_name">
+         Username: <input type = "text" name = "username">  <br>
+         Password: <input type = "text" name = "password">
          <input type = "submit" value = "Submit">
       </form>
       
