--- a/views/okta_index.ejs
+++ b/views/okta_index.ejs
@@ -9,7 +9,7 @@
 <body>
 	<div id="okta-login-container"></div>
 	<script type="text/javascript">
-		var orgUrl = 'https://example.okta.com';
+		var orgUrl = 'https://edwindemo.oktapreview.com';
 		var oktaSignIn = new OktaSignIn({baseUrl: orgUrl});
 
 		oktaSignIn.renderEl(
