--- a/views/okta_index.ejs
+++ b/views/okta_index.ejs
@@ -9,7 +9,8 @@
 <body>
 	<div id="okta-login-container"></div>
 	<script type="text/javascript">
-		var baseUrl = 'https://edwindemo.oktapreview.com';
+		var orgUrl = 'https://edwindemo.oktapreview.com';
+		var baseUrl = 'https://enigmatic-tor-28854.herokuapp.com';
 		var oktaSignIn = new OktaSignIn({baseUrl: orgUrl});
 
 		oktaSignIn.renderEl(
