--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,24 @@
 <html>
-   <body>
-      
-      <form action = "https://enigmatic-tor-28854.herokuapp.com/process_get" method = "GET">
-         Username: <input type = "text" name = "username">  <br>
-         Password: <input type = "text" name = "password">
-         <input type = "submit" value = "Submit">
-      </form>
-      
-   </body>
+<head>
+	<!-- Core widget js and css -->
+	<script src="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/1.6.0/js/okta-sign-in.min.js" type="text/javascript"></script>
+	<link href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/1.6.0/css/okta-sign-in.min.css" type="text/css" rel="stylesheet">
+	<!-- Customizable css theme options. Link your own customized copy of this file or override styles in-line -->
+	<link href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/1.6.0/css/okta-theme.css" type="text/css" rel="stylesheet">
+</head>
+<body>
+	<div id="okta-login-container"></div>
+	<script type="text/javascript">
+		var orgUrl = 'https://edwindemo.oktapreview.com';
+		var baseUrl = 'https://enigmatic-tor-28854.herokuapp.com';
+		var oktaSignIn = new OktaSignIn({baseUrl: orgUrl});
+
+		oktaSignIn.renderEl(
+		  { el: '#okta-login-container' },
+		  function (res) {
+		    if (res.status === 'SUCCESS') { res.session.setCookieAndRedirect(orgUrl); }
+		  }
+		);
+	</script>
+</body>
 </html>
